--- a/settings.html
+++ b/settings.html
@@ -1,19 +1,19 @@
 <!-- You might want to add additional HTML elements to ST. 
     It's good practice to separate it out from your code -->
-<div class="example-extension-settings">
+<div class="lucid-support-settings">
     <div class="inline-drawer">
         <div class="inline-drawer-toggle inline-drawer-header">
-            <b>Extension Example</b>
+            <b>DreamGen's Lucid Support</b>
             <div class="inline-drawer-icon fa-solid fa-circle-chevron-down down"></div>
         </div>
         <div class="inline-drawer-content">
-            <div class="example-extension_block flex-container">
-                <input id="my_button" class="menu_button" type="submit" value="Example Button" />
+            <div class="lucid-support_block flex-container">
+                <input id="test_button" class="menu_button" type="submit" value="Test Button" />
             </div>
 
-            <div class="example-extension_block flex-container">
-                <input id="example_setting" type="checkbox" />
-                <label for="example_setting">This is an example</label>
+            <div class="lucid-support_block flex-container">
+                <input id="enabled_setting" type="checkbox" />
+                <label for="enabled_setting">Enabled</label>
             </div>
 
             <hr class="sysHR" />
