Added support for changing the narrator and assistant subnames.

--- a/settings.html
+++ b/settings.html
@@ -8,12 +8,13 @@
         </div>
         <div class="inline-drawer-content">
             <div class="lucid-support_block flex-container">
-                <input id="test_button" class="menu_button" type="submit" value="Test Button" />
+                <label for="narrator_substr_setting">Narrator subname</label>
+                <input id="narrator_substr_setting" class="text_pole" type="text" />
             </div>
 
             <div class="lucid-support_block flex-container">
-                <input id="enabled_setting" type="checkbox" />
-                <label for="enabled_setting">Enabled</label>
+                <label for="assistant_substr_setting">Assistant subname</label>
+                <input id="assistant_substr_setting" class="text_pole" type="text" />
             </div>
 
             <hr class="sysHR" />
