Added configurable narrator and assistant tags for characters.

--- a/settings.html
+++ b/settings.html
@@ -7,6 +7,16 @@
             <div class="inline-drawer-icon fa-solid fa-circle-chevron-down down"></div>
         </div>
         <div class="inline-drawer-content">
+            <div class="lucid-support_block flex-container">
+                <label for="narrator_tag_setting">Narrator tag</label>
+                <input id="narrator_tag_setting" class="text_pole" type="text" />
+            </div>
+
+            <div class="lucid-support_block flex-container">
+                <label for="assistant_tag_setting">Assistant tag</label>
+                <input id="assistant_tag_setting" class="text_pole" type="text" />
+            </div>
+
             <hr class="sysHR" />
         </div>
     </div>
